[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Enemy 2.gd" type="Script" id=1]
[ext_resource path="res://scenes/Vehicle2 Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Durability Bar.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.769875, 1, 1.38887 )

[node name="Enemy2" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.6, 0, 0, 0, 0.8, 0, 0.430199, 0 )
shape = SubResource( 1 )

[node name="Vehicle2 Model" parent="CollisionShape" instance=ExtResource( 2 )]
transform = Transform( -0.25, 0, -2.18557e-08, 0, 0.25, 0, 2.18557e-08, 0, -0.25, 0.100644, -1.06505, -0.0761201 )

[node name="Firepoint" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0791922, 0.35213, -1.54315 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Firepoint2" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.279882, 0.35213, -1.54315 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Firepoint3" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.451321, 0.35213, -1.54315 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="MeleeAttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05119 )

[node name="CollisionShape" type="CollisionShape" parent="MeleeAttackArea"]
transform = Transform( 0.6, 0, 0, 0, 0.2, 0, 0, 0, 0.15, -0.0270445, 0.229117, -0.0520082 )
shape = SubResource( 4 )

[node name="Durability Bar" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.5, 0 )

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="body_entered" from="MeleeAttackArea" to="." method="_on_MeleeAttackArea_body_entered"]
